# sycamore-min-sized

./: Cargo.toml  README.md  index.html
src/: main.rs
