[package]
authors = [""]
edition = "2018"
name = "sycamore-trunk-gitpod-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "c1787f5" }
wee_alloc = "0.4.5"
